src/test/ui/error-codes/E0132.stderr
error[E0132]: start function is not allowed to have type parameters
  --> $DIR/E0132.rs:14:5
   |
LL | fn f< T >() {} //~ ERROR E0132
   |     ^^^^^ start function cannot have type parameters

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0132"
